Add styling to personal website

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <link rel="stylesheet" href="styles.css" />
     </head>
     <body>
         <img src="https://img.etsystatic.com/il/32ee97/770493775/il_340x270.770493775_3vyg.jpg?version=1">
