Add twitter to personal website

--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
         <h1>Michelle Cheung</h1>
         <p>A baked bean</p>
         <p>Will be your friend</p>
+        <a href="https://twitter.com/TTSF_MichelleC?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-show-count="false">Follow @TTSF_MichelleC</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
     </body>
 </html>
